installer/examples/manifests/verify/hello-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hellogo
  namespace: default
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: hellogo
        phase: prod
    spec:
      containers:
        - name: hellogo
          image: quay.io/dghubble/hellogo:c053dfd39aba92b8e7e1bd4678e0fee2807f2973
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "20Mi"
          livenessProbe:
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            httpGet:
              path: /
              port: 8080
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
