installer/examples/manifests/verify/stats-collector-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tectonic-stats-collector
  namespace: tectonic-system
  labels:
    app: tectonic-stats-collector
    component: stats-collector
spec:
  replicas: 1
  template:
    metadata:
      name: tectonic-stats-collector
      labels:
        app: tectonic-stats-collector
        component: stats-collector
    spec:
      containers:
      - name: tectonic-stats-collector
        imagePullPolicy: IfNotPresent
        image: quay.io/coreos/tectonic-stats:f9f368ac866572bc68815ccebd7bb1da89dd6cab
        ports:
        - containerPort: 31080
          protocol: TCP
        command: ["/spartakus", "collector", "--port=31080"]
      imagePullSecrets:
      - name: coreos-pull-secret
