installer/examples/manifests/verify/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellogo
spec:
  type: ClusterIP
  selector:
    name: hellogo
    phase: prod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
