installer/examples/manifests/verify/nginx-hpa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-hpa
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-hpa
  namespace: nginx-hpa
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: nginx-hpa
        namespace: nginx-hpa
    spec:
      containers:
      - name: nginx-hpa
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100M
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hpa
  namespace: nginx-hpa
spec:
  selector:
    name: nginx-hpa
  ports:
  - port: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-hpa-tester
  namespace: nginx-hpa
spec:
  restartPolicy: OnFailure
  containers:
  - name: nginx-hpa-tester
    image: debian:latest
    command: ["bash", "/configmaps/tester.sh"]
    volumeMounts:
    - name: nginx-hpa-tester
      mountPath: /configmaps/
  volumes:
  - name: nginx-hpa-tester
    configMap:
      name: nginx-hpa-tester
