installer/examples/manifests/verify/stats-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tectonic-stats-collector
  namespace: tectonic-system
  labels:
    app: tectonic-stats-collector
    component: stats-collector
spec:
  type: NodePort
  selector:
    app: tectonic-stats-collector
    component: stats-collector
  ports:
  - protocol: TCP
    port: 31080
    nodePort: 31080
