installer/examples/manifests/verify/hello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hellogo
  annotations:
    kubernetes.io/ingress.class: "tectonic"
spec:
  rules:
    - host: hellogo.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hellogo
              servicePort: 80
